--- a/src/Container/Sections/Footer/FooterRoadMap/FooterRoadMap.scss
+++ b/src/Container/Sections/Footer/FooterRoadMap/FooterRoadMap.scss
@@ -1,11 +1,13 @@
-button {
-    background: none;
-    border: none;
-    outline: none;
+@media (min-width: 320px) {
+    button {
+        background: none;
+        border: none;
+        outline: none;
 
-    a {
-        color: white;
-        text-decoration: none;
-        font-size: 14px;
+        a {
+            color: white;
+            text-decoration: none;
+            font-size: 14px;
+        }
     }
 }
