--- a/src/Container/Sections/Header/HeaderBottomSection/HeaderBottomSection.scss
+++ b/src/Container/Sections/Header/HeaderBottomSection/HeaderBottomSection.scss
@@ -6,3 +6,10 @@
         justify-content: space-between;
     }
 }
+
+@media (min-width: 1024px) {
+    .header-bottom-section {
+        height: auto;
+        margin-bottom: 40px;
+    }
+}
