--- a/src/Container/Sections/Footer/Footer.scss
+++ b/src/Container/Sections/Footer/Footer.scss
@@ -7,7 +7,6 @@
     }
 
     .footer-container {
-        padding: 15px;
         padding-top: 40px;
 
         .footer-down-links {
@@ -23,6 +22,8 @@
     .footer-container {
         display: flex;
         flex-wrap: wrap;
+        width: 80%;
+        margin: 0 auto;
 
         .footer-down-links {
             justify-content: center;
