--- a/src/Container/Sections/Header/HeaderBottomSection/HeaderNavBar/HeaderPhoneNavBar/HeaderDropDownMenu/HeaderDropDownMenu.scss
+++ b/src/Container/Sections/Header/HeaderBottomSection/HeaderNavBar/HeaderPhoneNavBar/HeaderDropDownMenu/HeaderDropDownMenu.scss
@@ -22,6 +22,7 @@
                 width: 95%;
                 border-bottom: 1px solid white;
                 margin-left: 2.5%;
+                display: inline-block;
             }
         }
     }
