--- a/src/Container/Sections/HomeSections/HomeStaff/HomeStaffTitle/HomeStaffTitle.scss
+++ b/src/Container/Sections/HomeSections/HomeStaff/HomeStaffTitle/HomeStaffTitle.scss
@@ -5,7 +5,8 @@
         h3 {
             font-weight: 800;
             text-align: center;
-            font-size: 25px;
+            font-size: 40px;
+            margin-bottom: 10px;
 
             span {
                 color: green;
@@ -14,6 +15,34 @@
         p,
         div {
             text-align: center;
+            a {
+                color: white;
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .home-staff-title {
+        flex-direction: row;
+        flex-wrap: wrap;
+        h3 {
+            text-align: left;
+            width: 100%;
+        }
+
+        p {
+            width: 70%;
+            text-align: left;
+            font-size: 22px;
+        }
+
+        div {
+            width: 30%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
 }
