--- a/src/Container/Sections/Footer/FooterExtendInfo/FooterExtendInfo.scss
+++ b/src/Container/Sections/Footer/FooterExtendInfo/FooterExtendInfo.scss
@@ -1,11 +1,13 @@
+@import '../../../Global/SCSS/mixins';
+@import '../../../Global/SCSS/variables';
+
 @media (min-width: 320px) {
     .footer-contacts {
         display: flex;
         flex-direction: column;
 
         h4 {
-            font-size: 18px;
-            font-weight: 700;
+            @include main_Title_Style_Phone_2;
             margin-top: 40px;
         }
     }
@@ -13,7 +15,7 @@
     .footer-protect-info {
         p {
             margin: 8px 0px;
-            font-size: 12px;
+            font-size: $mainFontSizeForListItem_12px;
         }
     }
 }
@@ -29,15 +31,11 @@
 
         h4 {
             margin-bottom: 0;
-            text-align: center;
         }
     }
 
     .footer-protect-info {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        @include display_Direction_Center_Column;
         width: calc(33% - 10px);
     }
 }
