--- a/src/Container/Sections/Footer/FooterRoadMap/FooterRoadMap.scss
+++ b/src/Container/Sections/Footer/FooterRoadMap/FooterRoadMap.scss
@@ -1,3 +1,5 @@
+@import '../../../Global/SCSS/mixins';
+
 @media (min-width: 320px) {
     button {
         background: none;
@@ -5,9 +7,7 @@
         outline: none;
 
         a {
-            color: white;
-            text-decoration: none;
-            font-size: 14px;
+            @include main_Style_For_Links_White;
         }
     }
 }
