--- a/src/Container/Sections/Header/HeaderBottomSection/HeaderNavBar/HeaderPhoneNavBar/HeaderDropDownMenu/HeaderDropDownMenu.scss
+++ b/src/Container/Sections/Header/HeaderBottomSection/HeaderNavBar/HeaderPhoneNavBar/HeaderDropDownMenu/HeaderDropDownMenu.scss
@@ -1,9 +1,11 @@
+@import '../../../../../../Global/SCSS/variables';
+
 @media (min-width: 320px) {
     .dropdown-menu {
         position: absolute;
         z-index: 2;
         list-style-type: none;
-        background-color: rgba(12, 75, 53, 1);
+        background-color: $mainColorForBackground;
         padding: 0;
         margin: 0;
         margin-left: -15px;
@@ -17,10 +19,10 @@
         li {
             a {
                 text-decoration: none;
-                color: white;
+                color: $mainColorForLinksAndText;
                 padding: 10px;
                 width: 95%;
-                border-bottom: 1px solid white;
+                border-bottom: 1px solid $mainColorForLinksAndText;
                 margin-left: 2.5%;
                 display: inline-block;
             }
