--- a/src/Container/Sections/Header/HeaderTopSection/HeaderLang/HeaderLang.scss
+++ b/src/Container/Sections/Header/HeaderTopSection/HeaderLang/HeaderLang.scss
@@ -1,3 +1,5 @@
+@import '../../../../Global/SCSS/variables';
+
 .header-lang select {
     background: none;
     border: none;
@@ -5,6 +7,6 @@
     color: white;
 
     option {
-        background-color: rgba(12, 75, 53, 1);
+        background-color: $mainColorForBackground;
     }
 }
