--- a/src/Container/Sections/HomeSections/HomeQuestions/HomeQuestionTitle/HomeQuestionTitle.scss
+++ b/src/Container/Sections/HomeSections/HomeQuestions/HomeQuestionTitle/HomeQuestionTitle.scss
@@ -1,12 +1,14 @@
+@import '../../../../Global/SCSS/mixins';
+@import '../../../../Global/SCSS/variables';
+
 @media (min-width: 320px) {
     .home-questions-title {
         h3 {
-            font-size: 45px;
-            text-align: center;
+            @include main_Title_Style_Phone_1;
             margin-bottom: 10px;
 
             span {
-                color: green;
+                color: $mainColorForButtonsAndTitle;
             }
         }
     }
