--- a/src/Container/Sections/HomeSections/HomeStaff/HomeStaffTeamCards/HomeStaffTeamCards.scss
+++ b/src/Container/Sections/HomeSections/HomeStaff/HomeStaffTeamCards/HomeStaffTeamCards.scss
@@ -1,3 +1,6 @@
+@import '../../../../Global/SCSS/mixins';
+@import '../../../../Global/SCSS/variables';
+
 .home-team-card {
     height: 400px;
     overflow: hidden;
@@ -12,7 +15,7 @@
         position: absolute;
         top: 75%;
         transition: top 0.5s;
-        background-color: green;
+        background-color: $mainColorForButtonsAndTitle;
         width: 100%;
         opacity: 70%;
         border-top-right-radius: 20px;
@@ -23,23 +26,18 @@
         p {
             margin: 0px 0px 5px;
             color: white;
-            font-size: 22px;
-            font-weight: 800;
+            @include main_Title_Style_Laptop_3;
 
             &:last-child {
                 margin-top: 20px;
-                font-size: 18px;
-                font-weight: normal;
+                @include main_Title_Style_Phone_3;
             }
         }
     }
 
     &:hover .home-team-card-description {
         top: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        @include display_Direction_Center_Column;
         border-radius: 0px;
     }
 }
