--- a/src/Container/Sections/HomeSections/HomeStaff/HomeStaffTitle/HomeStaffTitle.scss
+++ b/src/Container/Sections/HomeSections/HomeStaff/HomeStaffTitle/HomeStaffTitle.scss
@@ -1,15 +1,17 @@
+@import '../../../../Global/SCSS/mixins';
+@import '../../../../Global/SCSS/variables';
+
 @media (min-width: 320px) {
     .home-staff-title {
         display: flex;
         flex-direction: column;
         h3 {
-            font-weight: 800;
+            @include main_Title_Style_Phone_4;
             text-align: center;
-            font-size: 40px;
             margin-bottom: 10px;
 
             span {
-                color: green;
+                color: $mainColorForButtonsAndTitle;
             }
         }
         p,
@@ -17,7 +19,7 @@
             text-align: center;
             a {
                 color: white;
-                text-decoration: none;
+                text-decoration: $mainColorForLinksAndText;
             }
         }
     }
