--- a/src/Container/Sections/HomeSections/HomeTitle/HomeTitleLaptop/HomeTitleLaptopLinks/HomeTitleLaptopLinks.scss
+++ b/src/Container/Sections/HomeSections/HomeTitle/HomeTitleLaptop/HomeTitleLaptopLinks/HomeTitleLaptopLinks.scss
@@ -1,10 +1,12 @@
+@import '../../../../../Global/SCSS/mixins';
+@import '../../../../../Global/SCSS/variables';
+
 @media (min-width: 1024px) {
     .laptop-solution-links {
         & > a {
             margin-left: 20px;
-            color: green;
-            font-weight: 800;
-            text-decoration: none;
+            @include main_Style_For_Links_Green;
+            font-weight: $mainFontWeight_800;
         }
     }
 }
