--- a/src/Container/Sections/HomeSections/HomeTitle/HomeTitlePhone/HomeTitleCustomers/HomeTitleCustomers.scss
+++ b/src/Container/Sections/HomeSections/HomeTitle/HomeTitlePhone/HomeTitleCustomers/HomeTitleCustomers.scss
@@ -1,12 +1,13 @@
+@import '../../../../../Global/SCSS/mixins';
+@import '../../../../../Global/SCSS/variables';
+
 @media (min-width: 320px) {
     .home-solution-customers {
         display: flex;
         justify-content: center;
 
         .home-solution-achivment {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
+            @include display_Direction_Center_Column;
             margin-left: 7px;
 
             .solution-achivment-item {
@@ -16,12 +17,11 @@
                     rgba(255, 248, 241, 1),
                     rgba(203, 229, 206, 1)
                 );
-                height: 40px;
                 margin: 10px 0px;
 
                 span {
-                    font-size: 15px;
-                    font-weight: 800;
+                    font-size: $mainFontSizeForListItem_14px;
+                    font-weight: $mainFontWeight_800;
 
                     &:first-child {
                         margin-right: 5px;
