--- a/src/Container/Sections/HomeSections/HomeTitle/HomeTitlePhone/HomeTitleLinks/HomeTitleLinks.scss
+++ b/src/Container/Sections/HomeSections/HomeTitle/HomeTitlePhone/HomeTitleLinks/HomeTitleLinks.scss
@@ -1,3 +1,5 @@
+@import '../../../../../Global/SCSS/variables';
+
 @media (min-width: 320px) {
     .home-solution-link {
         margin: 10px 0px;
@@ -5,8 +7,8 @@
 
         a {
             text-decoration: none;
-            color: green;
-            font-weight: 800;
+            color: $mainColorForButtonsAndTitle;
+            font-weight: $mainFontWeight_800;
         }
     }
 }
