--- a/src/Container/Sections/HomeSections/HomeExperience/HomeExpierenceContent/HomeExpierenceTitle/HomeExpierenceTitle.scss
+++ b/src/Container/Sections/HomeSections/HomeExperience/HomeExpierenceContent/HomeExpierenceTitle/HomeExpierenceTitle.scss
@@ -21,5 +21,8 @@
 @media (min-width: 320px) {
     .home-expierence-title {
         width: 100%;
+        h3 {
+            margin-top: 0px;
+        }
     }
 }
