--- a/src/Container/Sections/HomeSections/HomeChoseUs/HomeChooseUsLogo/HomeChooseUsLogo.scss
+++ b/src/Container/Sections/HomeSections/HomeChoseUs/HomeChooseUsLogo/HomeChooseUsLogo.scss
@@ -1,6 +1,11 @@
 @media (min-width: 320px) {
     .choose-us-logo {
         margin-top: 30px;
+
+        img {
+            width: 100%;
+            object-fit: cover;
+        }
     }
 }
 
