add styles for cart and and view to cart

--- a/src/Container/Sections/Header/HeaderBottomSection/HeaderBottomSection.scss
+++ b/src/Container/Sections/Header/HeaderBottomSection/HeaderBottomSection.scss
@@ -5,6 +5,7 @@
         @include display_Space_Between;
         height: 70px;
         padding: 15px;
+        background-color: white;
     }
 }
 
