--- a/src/Container/Components/ServisesProductList/ServisesProductListItem.scss
+++ b/src/Container/Components/ServisesProductList/ServisesProductListItem.scss
@@ -35,6 +35,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin: 0 -10px;
 
             button {
                 margin: 0px 10px;
@@ -43,6 +44,9 @@
 
         .servises-item-button {
             margin-top: 15px;
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
 
             span {
                 display: flex;
@@ -69,6 +73,13 @@
 
             & div {
                 margin: 0px 15px;
+            }
+        }
+
+        .servises-item-button {
+            & div:nth-child(1) {
+                margin: auto;
+                padding-left: 75px;
             }
         }
     }
