--- a/src/Container/Components/CartProductList/CartProductListItem.scss
+++ b/src/Container/Components/CartProductList/CartProductListItem.scss
@@ -3,13 +3,13 @@
         display: flex;
         align-items: center;
 
-        span {
+        & span {
             &:nth-child(2) {
                 margin-left: 5px;
             }
         }
 
-        img {
+        & img {
             height: 40px;
             margin-left: 10px;
         }
