--- a/src/Container/Pages/ProductPage/ProductPageTitle/ProductPageTitle.scss
+++ b/src/Container/Pages/ProductPage/ProductPageTitle/ProductPageTitle.scss
@@ -6,6 +6,12 @@
         @include main_Title_Style_Laptop_3;
         margin-top: 25px;
 
+        .product-cart-title-btn {
+            min-width: auto;
+            padding: 0;
+            margin: 0 3%;
+        }
+
         & span {
             margin-left: 10px;
         }
@@ -16,6 +22,11 @@
     .product-card-title {
         font-size: 35px;
         font-weight: 800;
+
+        .product-cart-title-btn {
+            min-width: 64px;
+            padding: 6px 16px;
+        }
 
         & > img {
             width: 120px;
