--- a/src/Container/Pages/AuthPage/AuthForm/AuthForm.scss
+++ b/src/Container/Pages/AuthPage/AuthForm/AuthForm.scss
@@ -3,4 +3,9 @@
         display: flex;
         flex-direction: column;
     }
+
+    .auth_errors {
+        color: rgb(211, 47, 47);
+        font-weight: 800;
+    }
 }
